import org.jetbrains.kotlin.gradle.dsl.JvmTarget
import org.jetbrains.kotlin.gradle.dsl.KotlinVersion

plugins {
    id 'java-library'
    id 'idea'
    id 'eclipse'
    id 'net.neoforged.moddev' version "$mod_dev_gradle"
    id 'com.diffplug.spotless' version '8.0.0'
    id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
    id 'org.jetbrains.kotlin.plugin.lombok' version "$kotlin_version"
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = "$minecraft_version-$mod_version"
group = 'network.rs485'

// Local copy: inside the `runs` container an unqualified `mod_id` would resolve to a run
// configuration of that name instead of to the project property.
def modId = mod_id
base {
    archivesName = mod_id
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
        if (System.getProperty('idea.active')) {
            vendor = JvmVendorSpec.JETBRAINS
        }
    }
}

kotlin {
    compilerOptions {
        languageVersion.set(KotlinVersion.KOTLIN_2_0)
        jvmTarget.set(JvmTarget.JVM_25)
        freeCompilerArgs.add("-Xjvm-default=all")
    }
}

sourceSets {
    api {
        // API has no resources
        resources.srcDirs = []
        compileClasspath += main.compileClasspath
        runtimeClasspath += main.runtimeClasspath
        java { srcDirs = ['src/api/java'] }
    }
    main {
        compileClasspath += api.output
        runtimeClasspath += api.output
        java { srcDirs += 'common' }
        resources {
            srcDir 'src/generated/resources'
            exclude '**/*.bbmodel'
            exclude '.cache'
        }
        test {
            compileClasspath += api.output
            runtimeClasspath += api.output
        }
    }
}

configurations {
    libraries
    implementation.extendsFrom libraries
}

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    validateAccessTransformers = true

    runs {
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG

            systemProperty 'neoforge.enabledGameTestNamespaces', modId

            if (System.getProperty('idea.active')) {
                jvmArguments.add("-XX:+AllowEnhancedClassRedefinition")
            }
        }

        client {
            client()
            gameDirectory = file('runs/client')
        }

        server {
            server()
            gameDirectory = file('runs/server')
            programArgument '--nogui'
        }

        clientData {
            clientData()
            gameDirectory = file('runs/data')
            programArguments.addAll '--mod', modId, '--all',
                '--output', file('src/generated/resources/').getAbsolutePath(),
                '--existing', file('src/main/resources/').getAbsolutePath()
        }

        gameTestServer {
            type = "gameTestServer"
            gameDirectory = file('runs/gameTestServer')
        }
    }


    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet sourceSets.api
            sourceSet sourceSets.main
        }
    }

    unitTest {
        enable()
        testedMod = mods.logisticspipes
    }
}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
    maven {
        name 'JEI/Patchouli'
        url 'https://maven.blamejared.com/'
    }
    maven {
        name 'curseforge'
        url 'https://www.cursemaven.com'
    }
    maven {
        name 'Refined Storage'
        url 'https://maven.creeperhost.net'
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    [
        "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:$kotlinx_coroutines",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlinx_serialization",
        "org.jetbrains.kotlinx:kotlinx-serialization-core:$kotlinx_serialization",
    ].each { lib ->
        jarJar(implementation(lib))
    }

    compileOnly "org.projectlombok:lombok:$lombok_version"
    annotationProcessor "org.projectlombok:lombok:$lombok_version"

    compileOnly "mezz.jei:jei-$minecraft_version-common-api:$jei_version"
    compileOnly "mezz.jei:jei-$minecraft_version-neoforge-api:$jei_version"
    localRuntime "mezz.jei:jei-$minecraft_version-neoforge:$jei_version"

    implementation "curse.maven:jade-api-324717:$jade_id"

    compileOnly "org.appliedenergistics:appliedenergistics2:$ae2_version:api"
    //localRuntime "org.appliedenergistics:appliedenergistics2:$ae2_version"

    compileOnly("com.refinedmods.refinedstorage:refinedstorage-neoforge:$rs_version") {
        transitive = false
    }
    /*localRuntime("com.refinedmods.refinedstorage:refinedstorage-neoforge:$rs_version") {
        transitive = false
    }*/

    //localRuntime "curse.maven:mekanism-268560:7904058"
    testImplementation "org.jetbrains.kotlin:kotlin-test:2.4.0"
}

kotlinLombok {
    //noinspection GroovyAssignabilityCheck -- IDE misreads the decorated extension
    lombokConfigurationFile file("lombok.config")
}

spotless {
    java {
        target 'src/*/java/**/*.java'
        /*importOrder('\\#', 'java|javax|org|com|')

        endWithNewline()
        trimTrailingWhitespace()
        removeUnusedImports()
        leadingTabsToSpaces(4)*/
    }
}

tasks.register('generatePackageInfos') {
    def srcDirs = [
        layout.projectDirectory.dir("common"),
        layout.projectDirectory.dir("src/main/java"),
        layout.projectDirectory.dir("src/api/java")
    ]

    srcDirs.each { inputs.dir(it) }
    outputs.upToDateWhen { false }

    def roots = srcDirs.collect { it.asFile }

    doLast {
        def packageOf = { File root, File dir ->
            root.toPath().relativize(dir.toPath()).toString().replace(File.separator, '.')
        }
        def javaDirs = [:]
        def annotated = [] as Set

        roots.each { root ->
            if (!root.isDirectory()) return
            root.eachDirRecurse { dir ->
                def names = dir.list()
                if (names == null) return
                def pkgName = packageOf(root, dir)
                if (pkgName.isEmpty()) return
                if (names.contains('package-info.java')) {
                    annotated << pkgName
                } else if (names.any { it.endsWith('.java') }) {
                    javaDirs.putIfAbsent(pkgName, dir)
                }
            }
        }

        javaDirs.each { pkgName, dir ->
            if (annotated.contains(pkgName)) return
            new File(dir, 'package-info.java').text = """
                |@NullMarked
                |package $pkgName;
                |
                |import org.jspecify.annotations.NullMarked;
            """.stripMargin().trim() + "\n"
            logger.lifecycle("generated package-info for $pkgName")
        }
    }
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
        minecraft_version      : minecraft_version,
        minecraft_version_range: minecraft_version_range,
        neo_version            : neo_version,
        neo_version_range      : neo_version_range,
        loader_version_range   : loader_version_range,
        mod_id                 : mod_id,
        mod_name               : mod_name,
        mod_license            : mod_license,
        mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata


tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
    options.compilerArgs.addAll(['-Xmaxerrs', '100000'])
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

def lastCommit = providers.exec {
    commandLine 'git', 'rev-parse', 'HEAD'
}.standardOutput.asText.get().trim()

tasks.named('jar', Jar).configure {
    from(sourceSets.main.output)
    from(sourceSets.api.output)
    manifest {
        attributes([
            'Specification-Title'   : project.name,
            'Specification-Vendor'  : 'NoZeroG, Edivad99',
            'Specification-Version' : '1',
            'Implementation-Title'  : project.name,
            'Implementation-Version': project.version,
            'Implementation-Vendor' : 'NoZeroG, Edivad99',
            'Implementation-Commit' : lastCommit,
        ])
    }
}
